"Pull for state this versions"

--- a/app/templates/product.html
+++ b/app/templates/product.html
@@ -142,7 +142,7 @@
         <div class="new__container container">
             <div class="catalog_flex">
                 {% for el in product %}
-                <div to-url="{}" type="{{el.item.rarity}}" class="new__content swiper-slide">
+                <div type="{{el.item.rarity}}" class="new__content swiper-slide">
                     <div class="tag_rare  bg_shadow">
                         <legend>{{el.item.rarity}}1</legend>
                     </div>
