--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -19,17 +19,17 @@
 }
 
 /*=============== BASE ===============*/
-*{
+* {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
 }
 
-html{
+html {
   scroll-behavior: smooth;
 }
 
-body{
+body {
   margin: var(--header-height) 0 0 0;
   font-family: var(--body-font);
   font-size: var(--normal-font-size);
@@ -37,66 +37,70 @@ body{
   color: var(--text-color);
 }
 
-h1,h2,h3,h4{
+h1,
+h2,
+h3,
+h4 {
   color: var(--title-color);
   font-weight: var(--font-semi-bold);
 }
 
-ul{
+ul {
   list-style: none;
 }
 
-a{
+a {
   text-decoration: none;
 }
 
-img{
+img {
   max-width: 100%;
   height: auto;
 }
 
 button,
-input{
+input {
   border: none;
   outline: none;
 }
 
-button{
+button {
   cursor: pointer;
   font-family: var(--body-font);
   font-size: var(--normal-font-size);
 }
 
 /*=============== REUSABLE CSS CLASSES ===============*/
-.section{
+.section {
   padding: 4.5rem 0 2rem;
 }
 
-.section__title{
+.section__title {
   font-size: var(--h2-font-size);
   margin-bottom: var(--mb-2);
   text-align: center;
 }
 
 /*=============== LAYOUT ===============*/
-.container{
+.container {
   max-width: 968px;
   margin-left: var(--mb-1-5);
   margin-right: var(--mb-1-5);
 }
 
-.grid{
+.grid {
   display: grid;
 }
 
-.main{
-  overflow: hidden; /*For animation*/
+.main {
+  overflow: hidden;
+  /*For animation*/
 }
 
 /*=============== HEADER ===============*/
-.header{
+.header {
   width: 100%;
-  background: var(--body-color); 
+  background: var(--body-color);
   position: fixed;
   top: 0;
   left: 0;
@@ -104,38 +108,38 @@ button{
 }
 
 /*=============== NAV ===============*/
-.nav{
+.nav {
   height: var(--header-height);
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.nav__logo{
+.nav__logo {
   display: flex;
   align-items: center;
   column-gap: .5rem;
   font-weight: var(--font-medium);
 }
 
-.nav__logo-img{
+.nav__logo-img {
   width: 1.25rem;
 }
 
 .nav__link,
 .nav__logo,
 .nav__toggle,
-.nav__close{
+.nav__close {
   color: var(--title-color);
 }
 
-.nav__toggle{
+.nav__toggle {
   font-size: 1.25rem;
   cursor: pointer;
 }
 
-@media screen and (max-width: 767px){
-  .nav__menu{
+@media screen and (max-width: 767px) {
+  .nav__menu {
     position: fixed;
     width: 100%;
     background: var(--container-color);
@@ -148,14 +152,14 @@ button{
   }
 }
 
-.nav__img{
+.nav__img {
   width: 100px;
   position: absolute;
   top: 0;
   left: 0;
 }
 
-.nav__close{
+.nav__close {
   font-size: 1.8rem;
   position: absolute;
   top: .5rem;
@@ -163,39 +167,39 @@ button{
   cursor: pointer;
 }
 
-.nav__list{
+.nav__list {
   display: flex;
   flex-direction: column;
   align-items: center;
   row-gap: 1.5rem;
 }
 
-.nav__link{
+.nav__link {
   text-transform: uppercase;
   font-weight: var(--font-black);
   transition: .4s;
 }
 
-.nav__link:hover{
+.nav__link:hover {
   color: var(--text-color);
 }
 
 /* Show menu */
-.show-menu{
+.show-menu {
   top: 0;
 }
 
 /* Change background header */
-.scroll-header{
+.scroll-header {
   background: var(--container-color);
 }
 
 /* Active link */
-.active-link{
+.active-link {
   position: relative;
 }
 
-.active-link::before{
+.active-link::before {
   content: '';
   position: absolute;
   bottom: -.75rem;
@@ -207,22 +211,22 @@ button{
 }
 
 /*=============== HOME ===============*/
-.home__content{
+.home__content {
   row-gap: 1rem;
 }
 
-.home__group{
+.home__group {
   display: grid;
   position: relative;
   padding-top: 2rem;
 }
 
-.home__img{
+.home__img {
   height: 250px;
   justify-self: center;
 }
 
-.home__indicator{
+.home__indicator {
   width: 8px;
   height: 8px;
   background-color: var(--title-color);
@@ -232,7 +236,7 @@ button{
   right: 2rem;
 }
 
-.home__indicator::after{
+.home__indicator::after {
   content: '';
   position: absolute;
   width: 1px;
@@ -242,65 +246,65 @@ button{
   right: 45%;
 }
 
-.home__details-img{
+.home__details-img {
   position: absolute;
   right: .5rem;
 }
 
 .home__details-title,
-.home__details-subtitle{
+.home__details-subtitle {
   display: block;
   font-size: var(--small-font-size);
   text-align: right;
 }
 
-.home__subtitle{
+.home__subtitle {
   font-size: var(--h3-font-size);
   text-transform: uppercase;
   margin-bottom: var(--mb-1);
 }
 
-.home__title{
+.home__title {
   font-size: var(--biggest-font-size);
   font-weight: var(--font-black);
   line-height: 109%;
   margin-bottom: var(--mb-1);
 }
 
-.home__description{
+.home__description {
   margin-bottom: var(--mb-1);
 }
 
-.home__buttons{
+.home__buttons {
   display: flex;
   justify-content: space-between;
 }
 
 /* Swiper Class */
-.swiper-pagination{
+.swiper-pagination {
   position: initial;
   margin-top: var(--mb-1);
 }
 
-.swiper-pagination-bullet{
+.swiper-pagination-bullet {
   width: 5px;
   height: 5px;
   background-color: var(--title-color);
   opacity: 1;
 }
 
-.swiper-pagination-horizontal.swiper-pagination-bullets .swiper-pagination-bullet{
+.swiper-pagination-horizontal.swiper-pagination-bullets .swiper-pagination-bullet {
   margin: 0 .5rem;
-} 
+}
 
-.swiper-pagination-bullet-active{
+.swiper-pagination-bullet-active {
   width: 1.5rem;
   height: 5px;
   border-radius: .5rem;
 }
 
 /*=============== BUTTONS ===============*/
-.button{
+.button {
   display: inline-block;
   background-color: var(--first-color);
   color: var(--title-color);
@@ -310,86 +314,86 @@ button{
   transition: .3s;
 }
 
-.button:hover{
+.button:hover {
   background-color: var(--first-color-alt);
 }
 
-.button__icon{
+.button__icon {
   font-size: 1.25rem;
 }
 
-.button--ghost{
+.button--ghost {
   border: 2px solid;
   background-color: transparent;
   border-radius: 3rem;
   padding: .75rem 1.5rem;
 }
 
-.button--ghost:hover{
+.button--ghost:hover {
   background: none;
 }
 
-.button--link{
+.button--link {
   color: var(--title-color);
 }
 
-.button--flex{
+.button--flex {
   display: inline-flex;
   align-items: center;
   column-gap: .5rem;
 }
 
 /*=============== CATEGORY ===============*/
-.category__container{
+.category__container {
   grid-template-columns: repeat(2, 1fr);
   gap: 1rem 2rem;
 }
 
-.category__data{
+.category__data {
   text-align: center;
 }
 
-.category__img{
+.category__img {
   width: 120px;
   margin-bottom: var(--mb-0-75);
   transition: .3s;
 }
 
-.category__title{
+.category__title {
   margin-bottom: var(--mb-0-25);
 }
 
-.category__data:hover .category__img{
+.category__data:hover .category__img {
   transform: translateY(-.5rem);
 }
 
 /*=============== ABOUT ===============*/
-.about__container{
+.about__container {
   row-gap: 2rem;
 }
 
-.about__data{
+.about__data {
   text-align: center;
 }
 
-.about__description{
+.about__description {
   margin-bottom: var(--mb-2);
 }
 
-.about__img{
+.about__img {
   width: 200px;
   justify-self: center;
   animation: floating 2s ease-in-out infinite;
 }
 
 /*=============== TRICK OR TREAT ===============*/
-.trick__container{
+.trick__container {
   grid-template-columns: repeat(2, 1fr);
   gap: 1.5rem;
   padding-top: 1rem;
 }
 
-.trick__content{
+.trick__content {
   position: relative;
   background: var(--container-color);
   border-radius: 1rem;
@@ -398,29 +402,29 @@ button{
   overflow: hidden;
 }
 
-.trick__img{
+.trick__img {
   width: 90px;
   transition: .3s;
 }
 
 .trick__subtitle,
-.trick__price{
+.trick__price {
   display: block;
 }
 
-.trick__subtitle{
+.trick__subtitle {
   font-size: var(--smaller-font-size);
   margin-bottom: var(--mb-0-5);
 }
 
 .trick__title,
-.trick__price{
+.trick__price {
   color: var(--title-color);
   font-weight: var(--font-medium);
   font-size: var(--normal-font-size);
 }
 
-.trick__button{
+.trick__button {
   display: inline-flex;
   padding: .5rem;
   border-radius: .25rem .25rem .75rem .25rem;
@@ -429,47 +433,47 @@ button{
   bottom: 0;
 }
 
-.trick__icon{
+.trick__icon {
   font-size: 1.25rem;
   color: var(--title-color);
 }
 
-.trick__content:hover .trick__img{
+.trick__content:hover .trick__img {
   transform: translateY(-.5rem);
 }
 
-.trick__content:hover .trick__button{
+.trick__content:hover .trick__button {
   right: 0;
 }
 
 /*=============== DISCOUNT ===============*/
-.discount__container{
+.discount__container {
   background: var(--container-color);
   border-radius: 1rem;
   padding: 2.5rem 0 1.5rem;
   row-gap: .75rem;
 }
 
-.discount__data{
+.discount__data {
   text-align: center;
 }
 
-.discount__title{
+.discount__title {
   font-size: var(--h2-font-size);
   margin-bottom: var(--mb-2);
 }
 
-.discount__img{
+.discount__img {
   width: 200px;
   justify-self: center;
 }
 
 /*=============== NEW ARRIVALS ===============*/
-.new__container{
+.new__container {
   padding-top: 1rem;
 }
 
-.new__img{
+.new__img {
   width: 120px;
   margin-bottom: var(--mb-0-5);
   transition: .3s;
@@ -477,7 +481,7 @@ button{
   transform: translateY(0rem);
 }
 
-.new__content{
+.new__content {
   position: relative;
   background: var(--container-color);
   width: 242px;
@@ -487,7 +491,7 @@ button{
   overflow: hidden;
 }
 
-.new__tag{
+.new__tag {
   position: absolute;
   top: 8%;
   left: 8%;
@@ -498,36 +502,36 @@ button{
   border-radius: .25rem;
 }
 
-.new__title{
+.new__title {
   font-size: var(--normal-font-size);
   font-weight: var(--font-medium);
 }
 
-.new__subtitle{
+.new__subtitle {
   display: block;
   font-size: var(--small-font-size);
   margin-bottom: var(--mb-0-5);
 }
 
-.new__prices{
+.new__prices {
   display: inline-flex;
   align-items: center;
   column-gap: .5rem;
 }
 
-.new__price{
+.new__price {
   font-weight: var(--font-medium);
   color: var(--title-color);
 }
 
-.new__discount{
+.new__discount {
   color: var(--first-color);
   font-size: var(--smaller-font-size);
   text-decoration: line-through;
   font-weight: var(--font-medium);
 }
 
-.new__button{
+.new__button {
   display: inline-flex;
   padding: .5rem;
   border-radius: .25rem .25rem .75rem .25rem;
@@ -536,25 +540,25 @@ button{
   right: -3rem;
 }
 
-.new__icon{
+.new__icon {
   font-size: 1.25rem;
 }
 
-.new__content:hover .new__img{
+.new__content:hover .new__img {
   transform: translateY(-.5rem);
 }
 
-.new__content:hover .new__button{
+.new__content:hover .new__button {
   right: 0;
 }
 
 /*=============== NEWSLETTER ===============*/
-.newsletter__description{
+.newsletter__description {
   text-align: center;
   margin-bottom: var(--mb-1-5);
 }
 
-.newsletter__form{
+.newsletter__form {
   background: var(--container-color);
   padding: 1rem;
   display: flex;
@@ -562,51 +566,51 @@ button{
   border-radius: .75rem;
 }
 
-.newsletter__input{
+.newsletter__input {
   width: 70%;
   padding: 0 .5rem;
   background: none;
   color: var(--title-color);
 }
 
-.newsletter__input::placeholder{
+.newsletter__input::placeholder {
   color: var(--text-color);
 }
 
 /*=============== FOOTER ===============*/
-.footer{
+.footer {
   position: relative;
   overflow: hidden;
 }
 
 .footer__img-one,
-.footer__img-two{
+.footer__img-two {
   position: absolute;
   transition: .3s;
 }
 
-.footer__img-one{
+.footer__img-one {
   width: 100px;
   top: 6rem;
   right: -2rem;
 }
 
-.footer__img-two{
+.footer__img-two {
   width: 150px;
   bottom: 4rem;
   right: 4rem;
 }
 
 .footer__img-one:hover,
-.footer__img-two:hover{
+.footer__img-two:hover {
   transform: translateY(-.5rem);
 }
 
-.footer__container{
+.footer__container {
   row-gap: 2rem;
 }
 
-.footer__logo{
+.footer__logo {
   display: flex;
   align-items: center;
   column-gap: .5rem;
@@ -615,20 +619,20 @@ button{
   color: var(--title-color);
 }
 
-.footer__logo-img{
+.footer__logo-img {
   width: 20px;
 }
 
-.footer__description{
+.footer__description {
   margin-bottom: var(--mb-2-5);
 }
 
-.footer__social{
+.footer__social {
   display: flex;
   column-gap: .75rem;
 }
 
-.footer__social-link{
+.footer__social-link {
   display: inline-flex;
   background: var(--container-color);
   padding: .25rem;
@@ -637,31 +641,31 @@ button{
   font-size: 1rem;
 }
 
-.footer__social-link:hover{
+.footer__social-link:hover {
   background: var(--body-color);
 }
 
-.footer__title{
+.footer__title {
   font-size: var(--h3-font-size);
   margin-bottom: var(--mb-1);
 }
 
-.footer__links{
+.footer__links {
   display: grid;
   row-gap: .35rem;
 }
 
-.footer__link{
+.footer__link {
   font-size: var(--small-font-size);
   color: var(--text-color);
   transition: .3s;
 }
 
-.footer__link:hover{
+.footer__link:hover {
   color: var(--title-color);
 }
 
-.footer__copy{
+.footer__copy {
   display: block;
   text-align: center;
   font-size: var(--smaller-font-size);
@@ -669,7 +673,7 @@ button{
 }
 
 /*=============== SCROLL UP ===============*/
-.scrollup{
+.scrollup {
   position: fixed;
   background: var(--container-color);
   right: 1rem;
@@ -682,135 +686,144 @@ button{
   transition: .4s;
 }
 
-.scrollup__icon{
+.scrollup__icon {
   font-size: 1.25rem;
   color: var(--title-color);
 }
 
-.scrollup:hover{
+.scrollup:hover {
   background: var(--container-color);
   opacity: 1;
 }
 
 /* Show Scroll Up*/
-.show-scroll{
+.show-scroll {
   bottom: 3rem;
 }
 
 /*=============== SCROLL BAR ===============*/
-::-webkit-scrollbar{
+::-webkit-scrollbar {
   width: 0.6rem;
   background: #413e3e;
 }
 
-::-webkit-scrollbar-thumb{
+::-webkit-scrollbar-thumb {
   background: #272525;
   border-radius: .5rem;
 }
 
 /*===============  BREAKPOINTS ===============*/
 /* For small devices */
-@media screen and (max-width: 320px){
-  .container{
+@media screen and (max-width: 320px) {
+  .container {
     margin-left: var(--mb-1);
     margin-right: var(--mb-1);
   }
 
-  .home__img{
+  .home__img {
     height: 200px;
   }
-  .home__buttons{
+
+  .home__buttons {
     flex-direction: column;
     width: max-content;
     row-gap: 1rem;
   }
 
   .category__container,
-  .trick__container{
+  .trick__container {
     grid-template-columns: .8fr;
     justify-content: center;
   }
 }
 
 /* For medium devices */
-@media screen and (min-width: 576px){
-  .about__container{
+@media screen and (min-width: 576px) {
+  .about__container {
     grid-template-columns: .8fr;
     justify-content: center;
   }
 
-  .newsletter__container{
+  .newsletter__container {
     display: grid;
     grid-template-columns: .7fr;
     justify-content: center;
   }
-  .newsletter__description{
+
+  .newsletter__description {
     padding: 0 3rem;
   }
 }
 
-@media screen and (min-width: 767px){
-  body{
+@media screen and (min-width: 767px) {
+  body {
     margin: 0;
   }
 
-  .section{
+  .section {
     padding: 7rem 0 2rem;
   }
 
-  .nav{
+  .nav {
     height: calc(var(--header-height) + 1.5rem);
   }
+
   .nav__img,
   .nav__close,
-  .nav__toggle{
+  .nav__toggle {
     display: none;
   }
-  .nav__list{
+
+  .nav__list {
     flex-direction: row;
     column-gap: 3rem;
   }
-  .nav__link{
+
+  .nav__link {
     text-transform: initial;
     font-weight: initial;
   }
 
-  .home__content{
+  .home__content {
     padding: 8rem 0 2rem;
     grid-template-columns: repeat(2, 1fr);
     gap: 4rem;
   }
-  .home__img{
+
+  .home__img {
     height: 300px;
   }
-  .swiper-pagination{
+
+  .swiper-pagination {
     margin-top: var(--mb-2);
   }
 
-  .category__container{
+  .category__container {
     grid-template-columns: repeat(3, 200px);
     justify-content: center;
   }
 
-  .about__container{
+  .about__container {
     grid-template-columns: repeat(2, 1fr);
     align-items: center;
   }
+
   .about__title,
-  .about__data{
+  .about__data {
     text-align: initial;
   }
-  .about__img{
+
+  .about__img {
     width: 250px;
   }
 
-  .trick__container{
+  .trick__container {
     grid-template-columns: repeat(3, 200px);
     justify-content: center;
     gap: 2rem;
   }
 
-  .discount__container{
+  .discount__container {
     grid-template-columns: repeat(2, max-content);
     justify-content: center;
     align-items: center;
@@ -818,24 +831,27 @@ button{
     padding: 3rem 0;
     border-radius: 3rem;
   }
-  .discount__img{
+
+  .discount__img {
     width: 350px;
     order: -1;
   }
-  .discount__data{
+
+  .discount__data {
     padding-right: 6rem;
   }
 
-  .newsletter__container{
+  .newsletter__container {
     grid-template-columns: .5fr;
   }
 
-  .footer__container{
+  .footer__container {
     grid-template-columns: repeat(4, 1fr);
     justify-items: center;
     column-gap: 1rem;
   }
-  .footer__img-two{
+
+  .footer__img-two {
     right: initial;
     bottom: 0;
     left: 15%;
@@ -843,116 +859,135 @@ button{
 }
 
 /* For large devices */
-@media screen and (min-width: 992px){
-  .container{
+@media screen and (min-width: 992px) {
+  .container {
     margin-left: auto;
     margin-right: auto;
   }
 
-  .section__title{
+  .section__title {
     font-size: var(--h1-font-size);
     margin-bottom: 3rem;
   }
 
-  .home__content{
+  .home__content {
     padding-top: 9rem;
     gap: 3rem;
   }
-  .home__group{
+
+  .home__group {
     padding-top: 0;
   }
-  .home__img{
+
+  .home__img {
     height: 400px;
     transform: translateY(-3rem);
   }
-  .home__indicator{
+
+  .home__indicator {
     top: initial;
     right: initial;
     bottom: 15%;
     left: 45%;
   }
-  .home__indicator::after{
+
+  .home__indicator::after {
     top: 0;
     height: 75px;
   }
-  .home__details-img{
+
+  .home__details-img {
     bottom: 0;
     right: 58%;
   }
-  .home__title{
+
+  .home__title {
     margin-bottom: var(--mb-1-5);
   }
-  .home__description{
+
+  .home__description {
     margin-bottom: var(--mb-2-5);
     padding-right: 2rem;
   }
 
-  .category__container{
+  .category__container {
     column-gap: 8rem;
   }
-  .category__img{
+
+  .category__img {
     width: 200px;
   }
 
-  .about__container{
+  .about__container {
     column-gap: 7rem;
   }
-  .about__img{
+
+  .about__img {
     width: 350px;
   }
-  .about__description{
+
+  .about__description {
     padding-right: 2rem;
   }
 
-  .trick__container{
+  .trick__container {
     gap: 3.5rem;
   }
-  .trick__content{
+
+  .trick__content {
     border-radius: 1.5rem;
   }
-  .trick__img{
+
+  .trick__img {
     width: 110px;
   }
-  .trick__title{
+
+  .trick__title {
     font-size: var(--h3-font-size);
   }
 
-  .discount__container{
+  .discount__container {
     column-gap: 7rem;
   }
 
-  .new__content{
-    width: 310px;
+  .new__content {
+    /* width: 310px; */
     border-radius: 1rem;
     padding: 2rem 0;
   }
-  .new__img{
+
+  .new__img {
     width: 150px;
   }
+
   .new__img,
-  .new__subtitle{
+  .new__subtitle {
     margin-bottom: var(--mb-1);
   }
-  .new__title{
+
+  .new__title {
     font-size: var(--h3-font-size);
   }
 
-  .footer__copy{
+  .footer__copy {
     margin-top: 6rem;
   }
 }
 
-@media screen and (min-width: 1200px){
-  .home__img{
+@media screen and (min-width: 1200px) {
+  .home__img {
     height: 420px;
   }
-  .swiper-pagination{
+
+  .swiper-pagination {
     margin-top: var(--mb-2-5);
   }
-  .footer__img-one{
+
+  .footer__img-one {
     width: 120px;
   }
-  .footer__img-two{
+
+  .footer__img-two {
     width: 180px;
     top: 30%;
     left: -3%;
@@ -961,7 +996,15 @@ button{
 
 /*=============== KEYFRAMES ===============*/
 @keyframes floating {
-  0% { transform: translate(0,  0px); }
-  50%  { transform: translate(0, 15px); }
-  100%   { transform: translate(0, -0px); }   
+  0% {
+    transform: translate(0, 0px);
+  }
+
+  50% {
+    transform: translate(0, 15px);
+  }
+
+  100% {
+    transform: translate(0, -0px);
+  }
 }
