--- a/assets/css/varibles.css
+++ b/assets/css/varibles.css
@@ -17,13 +17,13 @@
     /*--body-color: linear-gradient(90deg, hsl(360, 28%, 40%) 0%, hsl(18, 28%, 40%) 100%);*/
     /*--container-color: linear-gradient(136deg, hsl(360, 28%, 35%) 0%, hsl(18, 28%, 35%) 100%);*/
 
-    /*Black solid*/
-    /*--body-color: hsl(30, 8%, 8%);*/
-    /*--container-color: hsl(30, 8%, 10%);*/
+    /* Black solid*/
+    --body-color: hsl(30, 8%, 8%);
+    --container-color: hsl(30, 8%, 10%);
 
     /*Black gradient*/
-    --body-color: linear-gradient(136deg, hsl(104deg 1% 1%) 0%, hsl(58deg 14% 9% / 78%) 100%);
-    --container-color: linear-gradient(136deg, hsl(104deg 1% 1%) 0%, hsl(58deg 14% 9% / 78%) 100%);
+    /* --body-color: linear-gradient(136deg, hsl(104deg 1% 1%) 0%, hsl(58deg 14% 9% / 78%) 100%); */
+    /* --container-color: linear-gradient(136deg, hsl(104deg 1% 1%) 0%, hsl(58deg 14% 9% / 78%) 100%); */
 
     /*========== Font and typography ==========*/
     --body-font: 'Poppins', sans-serif;
@@ -53,19 +53,7 @@
     --z-tooltip: 10;
     --z-fixed: 100;
 
-    /*========== rarity color ==========*/
-    --color-base: #FFFFFFFF;
     --color-text: hsl(0, 0%, 50%);
-    --color-end: hsl(0, 12%, 29%);
-    --color-rare: hsl(320, 98%, 55%);
-    --color-epic: hsl(45, 91%, 57%);
-    --color-uncomon: hsl(184, 90%, 45%);
-    --color-land: hsl(144, 94%, 44%);
-
-
-
-    --rare_c: linear-gradient(136deg, var(--color-rare) 0%, hsla(295, 56%, 9%, 0.77) 100%);
-    --uncomon_c: linear-gradient(136deg, hsl(210, 76%, 49%) 0%, hsla(295, 56%, 9%, 0.77) 100%);
 
 
 }
