--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,6 +14,7 @@
 
 <body>
     <script src="/js/jquery.min.js"></script>
+    <script src="/js/dispatch-handler.js"></script>
     <script src="/js/handler.js"></script>
     <!--==================== HEADER ====================-->
     <header class="header" id="header">
@@ -42,7 +43,7 @@
                     </li>
 
                     <li class="nav__item">
-                        <a href="#catalog" class="nav__link">catalog</a>
+                        <a href="/app" to-url="/app" class="nav__link">catalog</a>
                     </li>
 
                     <a id='cm_button' href="#" class="button button--ghost" onclick=connectMetamask()>Connect wallet</a>
@@ -156,7 +157,7 @@
 
     <!--=============== MAIN JS ===============-->
     <script src="/js/main.js"></script>
-    <script src="/js/w4.js"></script>
+    <!-- <script src="/js/w4.js"></script> -->
 </body>
 
 </html>
