--- a/app/templates/product.html
+++ b/app/templates/product.html
@@ -12,7 +12,8 @@
 <link rel="stylesheet" href="/css/swiper-bundle.min.css">
 <!--=============== CSS ===============-->
 <link rel="stylesheet" href="/css/styles.css">
-<link rel="stylesheet" href="/css/catalog.css">
+<!-- <link rel="stylesheet" href="/css/catalog.css"> -->
+<link rel="stylesheet" href="/css/product.css">
 
 <!--=============== JS WEB3 ===============-->
 <script type="module" src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
@@ -28,95 +29,56 @@
         <div class="swiper home-swiper">
             <div class="swiper-wrapper">
                 <!-- HOME SLIDER 1 -->
-                <section class="swiper-slide">
+                <section class="">
                     <div class="home__content grid">
                         <div class="home__group">
-                            <img src="/img/home1-img.png" alt="" class="home__img">
+                            <img src="/img/{{ item.image }}" alt="" class="home__img">
                             <div class="home__indicator"></div>
 
+                            <span class="home__details-subtitle" type="{{ item.rarity }}">{{ item.rarity }}</span>
                             <div class="home__details-img">
-                                <h4 class="home__details-title">The Labu “Reiza”</h4>
-                                <span class="home__details-subtitle">The Living Pumpkin</span>
+                                <h4 class="home__details-title">{{item.name}}</h4>
+                                <span class="home__details-subtitle">{{ item.category }}</span>
+
                             </div>
                         </div>
-
+                        {% if not test %}
                         <div class="home__data">
-                            <h3 class="home__subtitle">#1 Top Scariest Ghost</h3>
-                            <h1 class="home__title">UOOOO <br> TRICK OR <br> TREAT!!</h1>
-                            <p class="home__description">Hi, I'm Reiza, people call me "El Labu". I am currently
-                                trying
-                                to learn
-                                something new, building my own bike with parts made only in Malaysia.
-                            </p>
-
+                            <h3 class="home__subtitle" type="{{ item.rarity }}">{{ item.rarity }}</h3>
+                            <h1 class="home__title">{{ item.name }}</h1>
+                            <p class="home__description"> {{ item.description }}</p>
                             <div class="home__buttons">
                                 <a href="#" class="button">Book Now</a>
-                                <a href="#" class="button--link button--flex">Track Record <i
-                                        class='bx bx-right-arrow-alt button__icon'></i></a>
+                                <a href="#" class="button--link button--flex">
+                                    Track Record
+                                    <i class='bx bx-right-arrow-alt button__icon'></i>
+                                </a>
                             </div>
                         </div>
-                    </div>
-                </section>
+                        {% else %}
+                        <div class="price-block inside-bs">
+                            <div class="price-line">
+                                <div class="price">
+                                    <h1>price</h1>
+                                    <paragraph>{{ shop.price }} AMT</paragraph>
+                                </div>
+                                <button class="buy-button">Buy Now</button>
+                            </div>
+                            <hr>
+                            <div class="desc-line">
+                                <h1>Minted 4 hours ago</h1>
+                                <div class="owner-block">
+                                    <h1>owner</h1>
+                                    <div class="owner">
+                                        <img src="{{ item.owner.image }}" alt="" class="avatar">
+                                        <div class="nickname">@{{ item.owner.name }}</div>
+                                        <!-- <span>{{ item.owner }}</span> -->
+                                    </div>
+                                </div>
 
-                <!-- HOME SLIDER 2 -->
-                <section class="swiper-slide">
-                    <div class="home__content grid">
-                        <div class="home__group">
-                            <img src="/img/home2-img.png" alt="" class="home__img">
-                            <div class="home__indicator"></div>
-
-                            <div class="home__details-img">
-                                <h4 class="home__details-title">Adino & Grahami</h4>
-                                <span class="home__details-subtitle">No words can describe them</span>
                             </div>
                         </div>
-
-                        <div class="home__data">
-                            <h3 class="home__subtitle">#2 top Best duo</h3>
-                            <h1 class="home__title">BRING BACK <br> MY COTTON <br> CANDY</h1>
-                            <p class="home__description">Adino steals cotton candy from his brother and eats them
-                                all in
-                                one bite,
-                                a hungry beast. Grahami can no longer contain his anger towards Adino.
-                            </p>
-
-                            <div class="home__buttons">
-                                <a href="#" class="button">Book Now</a>
-                                <a href="#" class="button--link button--flex">Track Record <i
-                                        class='bx bx-right-arrow-alt button__icon'></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </section>
-
-                <!-- HOME SLIDER 3 -->
-                <section class="swiper-slide">
-                    <div class="home__content grid">
-                        <div class="home__group">
-                            <img src="/img/home3-img.png" alt="" class="home__img">
-                            <div class="home__indicator"></div>
-
-                            <div class="home__details-img">
-                                <h4 class="home__details-title">Captain Sem</h4>
-                                <span class="home__details-subtitle">Veteran Spooky Ghost</span>
-                            </div>
-                        </div>
-
-                        <div class="home__data">
-                            <h3 class="home__subtitle">#3 Top Scariest Ghost</h3>
-                            <h1 class="home__title">RESPAWN <br> THE SPOOKY <br> SKULL</h1>
-                            <p class="home__description">In search for cute little puppy, Captain Sem has come back
-                                from
-                                his tragic death.
-                                With his hogwarts certified power he promise to be a hero for all of ghostkind.
-                            </p>
-
-                            <div class="home__buttons">
-                                <a href="#" class="button">Book Now</a>
-                                <a href="#" class="button--link button--flex">Track Record <i
-                                        class='bx bx-right-arrow-alt button__icon'></i></a>
-                            </div>
-                        </div>
+                        {% endif %}
                     </div>
                 </section>
             </div>
@@ -133,41 +95,6 @@
             </div>
 
             <img src="/img/discount-img.png" alt="" class="discount__img">
-        </div>
-    </section>
-
-    <!--==================== CATALOG ====================-->
-    <section class="section catalog" id="catalog">
-        <h2 class="section__title">Catalog</h2>
-        <div class="new__container container">
-            <div class="catalog_flex">
-                {% for el in product %}
-                <div type="{{el.item.rarity}}" class="new__content swiper-slide">
-                    <div class="tag_rare  bg_shadow">
-                        <legend>{{el.item.rarity}}1</legend>
-                    </div>
-                    <div class="new__tag">New</div>
-                    <img src="/img/{{el.item.image}}" alt="" class="new__img">
-                    <h3 class="new__title">{{el.item.name}}</h3>
-                    <span class="new__subtitle">{{el.item.type}}</span>
-
-                    <a href="/user/{{ el.item.owner.id }}" class="button button_owner bg">
-                        <img src="{{el.item.owner.image}}">
-                    </a>
-
-                    <button class="button new__button bg">
-                        <i class='bx bx-cart-alt new__icon'></i>
-                    </button>
-
-                    <div class="new__prices">
-                        <span class="new__price">${{el.price}}</span>
-                        {% if el.total_price %}
-                        <span class="new__discount">${{el.total_price}}</span>
-                        {% endif %}
-                    </div>
-                </div>
-                {% endfor %}
-            </div>
         </div>
     </section>
 
