--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -232,7 +232,8 @@ button {
   background-color: var(--title-color);
   border-radius: 50%;
   position: absolute;
-  top: 7rem;
+  /* top: 7rem; */
+  top: 8rem;
   right: 2rem;
 }
 
@@ -249,6 +250,7 @@ button {
 .home__details-img {
   position: absolute;
   right: .5rem;
+  top: 2rem;
 }
 
 .home__details-title,
@@ -257,6 +259,7 @@ button {
   font-size: var(--small-font-size);
   text-align: right;
 }
+
 
 .home__subtitle {
   font-size: var(--h3-font-size);
@@ -889,7 +892,8 @@ button {
     top: initial;
     right: initial;
     bottom: 15%;
-    left: 45%;
+    /* left: 45%; */
+    left: 60%;
   }
 
   .home__indicator::after {
@@ -899,7 +903,9 @@ button {
 
   .home__details-img {
     bottom: 0;
-    right: 58%;
+    /* right: 58%; */
+    top: auto;
+    right: 42%;
   }
 
   .home__title {
