--- a/assets/scss/product.scss
+++ b/assets/scss/product.scss
@@ -174,6 +174,7 @@ section {
             transition: .4s;
             box-shadow: 0px 9px 14px -2px;
             color: none;
+            pointer-events: all;
         }
 
 
@@ -243,4 +244,23 @@ section {
             transform: translateY(-0.05rem);
         }
     }
+}
+
+.t-v2 {
+    text-align: center;
+    color: #4a4948;
+}
+
+.discount__container {
+    // column-gap: 13rem;   
+
+    .discount__data {
+        // padding: 0;  
+    }
+}
+
+
+.avatar__img {
+    width: 15rem;
+    border-radius: 10px;
 }
